Add routing and metadata

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 @font-face {
     font-family: "Roboto Mono";
-    font-style: italic;
+    font-style: normal;
     font-weight: 100 700;
     font-display: swap;
     src: url("/fonts/roboto-mono.woff2") format("woff2");
@@ -24,33 +24,20 @@
 }
 
 html {
+    --color-background: #000000;
+    --color-foreground: #ffffff;
+    --font-mono: "Roboto Mono", system-ui;
+    --font-primary: "Roboto Flex", system-ui;
+
+    font-family: var(--font-primary);
     font-size: 16px;
-    color: #ffffff;
-    background-color: #000000;
-}
-
-.font-primary {
-    font-family: "Roboto Flex", system-ui;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-variation-settings:
-        "slnt" 0,
-        "wdth" 100,
-        "GRAD" 0,
-        "XOPQ" 96,
-        "XTRA" 468,
-        "YOPQ" 79,
-        "YTAS" 750,
-        "YTDE" -203,
-        "YTFI" 738,
-        "YTLC" 514,
-        "YTUC" 712;
+    font-optical-sizing: auto;
+    color: var(--color-foreground);
+    background-color: var(--color-background);
 }
 
-.font-mono {
-    font-family: "Roboto Mono", system-ui;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+body {
+    margin: 0;
 }
