--- a/src/components/core/page-header/index.module.css
+++ b/src/components/core/page-header/index.module.css
@@ -1,5 +1,5 @@
 .component {
-    height: 400px;
+    height: var(--size-header);
     display: flex;
     flex-direction: column;
     justify-content: center;
