--- a/src/components/core/page-footer/index.module.css
+++ b/src/components/core/page-footer/index.module.css
@@ -1,3 +1,15 @@
 .component {
-    min-height: 400px;
+    height: var(--size-footer);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 0.8rem;
+}
+
+.compoennt p {
+    margin: 0;
+}
+
+.copyright {
+    flex: 1;
 }
