--- a/src/components/core/page-footer/index.module.css
+++ b/src/components/core/page-footer/index.module.css
@@ -1,5 +1,6 @@
 .component {
     height: var(--size-footer);
+    padding: 0 var(--size-2);
     display: flex;
     flex-direction: row;
     align-items: center;
