--- a/src/components/core/page-navigator/index.module.css
+++ b/src/components/core/page-navigator/index.module.css
@@ -1,13 +1,11 @@
 .component {
     top: 0;
-    left: 0;
-    right: 0;
     height: 60px;
     padding: 0 var(--size-2);
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: fixed;
+    position: sticky;
     background-color: var(--color-background);
     font-size: 0.8rem;
     z-index: 1;
