--- a/src/components/core/page-header/index.module.css
+++ b/src/components/core/page-header/index.module.css
@@ -1,5 +1,6 @@
 .component {
     height: var(--size-header);
+    padding: 0 var(--size-2);
     display: flex;
     flex-direction: column;
     justify-content: center;
