--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,17 @@
         U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
+@font-face {
+    font-family: "Roboto Mono";
+    font-style: normal;
+    font-weight: 100 700;
+    font-display: swap;
+    src: url("/fonts/roboto-mono.woff2") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+        U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+        U+FFFD;
+}
+
 html {
     --color-background: #000000;
     --color-foreground: #ffffff;
@@ -37,6 +48,11 @@ html {
 
 body {
     margin: 0;
+}
+
+::selection {
+    color: var(--color-background);
+    background-color: var(--color-foreground);
 }
 
 @media screen and (min-width: 425px) {
