--- a/src/components/core/page-content/index.module.css
+++ b/src/components/core/page-content/index.module.css
@@ -1,8 +1,35 @@
 .component {
-    max-width: 600px;
+    max-width: 700px;
     padding: var(--size-2);
 }
 
 .expanded {
     max-width: unset;
+}
+
+.component h1 {
+    margin: 0;
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.component h2 {
+    margin: 80px 0 0 0;
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+
+.component p {
+    margin: 40px 0;
+    font-weight: 300;
+    line-height: 1.6rem;
+    color: var(--color-foreground-subtle);
+}
+
+.component *:first-child {
+    margin-top: 0;
+}
+
+.component *:last-child {
+    margin-bottom: 0;
 }
