Improve article copy elements and styling

--- a/src/components/core/page-content/index.module.css
+++ b/src/components/core/page-content/index.module.css
@@ -14,16 +14,30 @@
 }
 
 .component h2 {
-    margin: 80px 0 0 0;
+    margin: var(--size-4) 0 0 0;
     font-size: 1.3rem;
     font-weight: 400;
 }
 
 .component p {
-    margin: 40px 0;
+    margin: var(--size-2) 0;
     font-weight: 300;
     line-height: 1.6rem;
     color: var(--color-foreground-subtle);
+}
+
+.component ol,
+.component ul {
+    margin: var(--size-2) 0;
+}
+
+.component li {
+    font-weight: 300;
+    line-height: 1.6rem;
+}
+
+.component li + li {
+    margin-top: var(--size-1);
 }
 
 .component *:first-child {
