--- a/public/index.css
+++ b/public/index.css
@@ -22,10 +22,10 @@
 
 html {
     --color-background: #000000;
-    --color-foreground: #ffffff;
-    --color-surface-background: #303030;
+    --color-foreground: #f0f0f0;
+    --color-surface-background: #202020;
     --color-surface-foreground: #ffffff;
-    --size-1: 10px;
+    --size-1: 20px;
     --size-2: calc(var(--size-1) * 2);
     --size-3: calc(var(--size-1) * 3);
     --size-4: calc(var(--size-1) * 4);
@@ -34,7 +34,7 @@ html {
     --size-7: calc(var(--size-1) * 7);
     --size-8: calc(var(--size-1) * 8);
     --size-header: 400px;
-    --size-footer: 400px;
+    --size-footer: 200px;
 
     font-family: "Noto Sans", sans-serif;
     font-size: 18px;
@@ -53,10 +53,4 @@ body {
 ::selection {
     color: var(--color-background);
     background-color: var(--color-foreground);
-}
-
-@media screen and (min-width: 425px) {
-    html {
-        --size-1: 20px;
-    }
 }
