--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,19 @@
 html {
     --color-background: #000000;
     --color-foreground: #ffffff;
+    --size-1: 20px;
+    --size-2: calc(var(--size-1) * 2);
+    --size-3: calc(var(--size-1) * 3);
+    --size-4: calc(var(--size-1) * 4);
+    --size-5: calc(var(--size-1) * 5);
+    --size-6: calc(var(--size-1) * 6);
+    --size-footer: 320px;
+    --size-header: 320px;
 
     /* font variables are defined in the src/layout.tsx file */
     font-family: var(--font-main);
     font-weight: 400;
-    font-size: 16px;
+    font-size: 18px;
 
     color: var(--color-foreground);
     background-color: var(--color-background);
@@ -19,4 +27,9 @@ html {
 
 body {
     margin: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
