--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 html {
     --color-background: #000000;
-    --color-foreground: #ffffff;
+    --color-foreground: #f0f0f0;
+    --color-surface-background: #202020;
+    --color-surface-foreground: #f0f0f0;
     --size-1: 20px;
     --size-2: calc(var(--size-1) * 2);
     --size-3: calc(var(--size-1) * 3);
@@ -14,6 +16,7 @@ html {
     font-family: var(--font-main);
     font-weight: 400;
     font-size: 18px;
+    line-height: 1.4rem;
 
     color: var(--color-foreground);
     background-color: var(--color-background);
