--- a/src/components/page-renderer/index.module.css
+++ b/src/components/page-renderer/index.module.css
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 10px;
 }
 
 .title {
@@ -38,7 +39,12 @@
 }
 
 .content {
+    max-width: 700px;
     padding: var(--size-2);
+}
+
+.content.wide {
+    max-width: unset;
 }
 
 .footer {
