--- a/src/components/page-elements/articles-element/index.module.css
+++ b/src/components/page-elements/articles-element/index.module.css
@@ -6,13 +6,18 @@
 }
 
 .link {
-    flex: 0 1 auto;
     width: 100%;
-    max-width: 320px;
     aspect-ratio: 1;
     position: relative;
     background-color: #202020;
     user-select: none;
+}
+
+@media screen and (min-width: 500px) {
+    .link {
+        min-width: 320px;
+        max-width: 320px;
+    }
 }
 
 .article {
@@ -21,6 +26,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    backdrop-filter: brightness(100%);
+}
+
+.link:hover .article {
+    backdrop-filter: brightness(120%);
 }
 
 .title {
